--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,12 @@
 </head>
 <body>
     <h1>Mi página personal</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati vitae doloremque rerum illum animi, quae non nam, perferendis 
+        velit eius rem eveniet officiis at est nobis 
+        et eligendi assumenda distinctio!
+    </p>
 
-    <p></p>
+    <h1>Otra sección</h1>
 
 
 </body>
