Más contenido en el html principal

--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,10 @@
     </p>
 
     <h1>Otra sección</h1>
+    <P>Más contenido</P>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nulla veritatis dolorem 
+        qui ad pariatur et officiis perferendis, est illum? Adipisci, est quisquam! Aliquid 
+        exercitationem quos similique, iste perspiciatis accusamus.</p>
 
 
 </body>
